# fake_user_agent

./: .gitignore  LICENSE  Makefile  README.md  __init__.py  fake_user_agent.py  fake_useragent.json  pyproject.toml  requirements.txt  user_agent.py
backup/: fake_useragent.json
fake_user_agent/: __init__.py  aio_main.py  args.py  errors.py  log.py  main.py  parse.py  settings.py  thread_version.py  user_agent.py
fake_useragent/: .coverage  __init__.py  aio_main.py  aio_utils.py  main.py  settings.py  utils.py
tests/: .coverage  test_main.py  test_utils.py
