[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fake_user_agent"
authors = [{name = "Kate Wang", email = "kate.wang2018@gmail.com"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.7"
dependencies = ["lxml", "aiohttp"]
keywords = ["python", "browser", "useragent", "User-Agent", "header"]
version = "2.3.1"
description = "Randomly generate a valid useragent for faking a browser."

[project.urls]
Source = "https://github.com/KateWang2016/fake_user_agent"

[project.scripts]
fakeua = "fake_user_agent:run_on_term"
